[package]
name = "migraineinator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
